--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
 inflection==0.5.1
 packaging==25.0
+pillow==11.2.1
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.1.1
