--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,61 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+annotated-types==0.7.0
 asgiref==3.8.1
+attrs==25.3.0
+bitarray==3.4.3
+certifi==2025.6.15
+charset-normalizer==3.4.2
+ckzg==2.1.1
+cytoolz==1.0.1
 Django==5.2.3
 django-cors-headers==4.7.0
 django-schema-viewer==0.5.3
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-spectacular==0.28.0
 drf-yasg==1.21.10
+eth-account==0.13.7
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.7.0
+eth-rlp==2.2.0
+eth-typing==5.2.1
+eth-utils==5.3.0
+eth_abi==5.2.0
+frozenlist==1.7.0
+hexbytes==1.3.1
+idna==3.10
 inflection==0.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+multidict==6.6.2
 packaging==25.0
+parsimonious==0.10.0
 pillow==11.2.1
+propcache==0.3.2
 psycopg2-binary==2.9.10
+pycryptodome==3.23.0
+pydantic==2.11.7
+pydantic_core==2.33.2
 PyJWT==2.9.0
 python-dotenv==1.1.1
 pytz==2025.2
+pyunormalize==16.0.0
 PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+rlp==4.1.0
+rpds-py==0.25.1
 sqlparse==0.5.3
+toolz==1.0.0
+types-requests==2.32.4.20250611
+typing-inspection==0.4.1
+typing_extensions==4.14.0
 uritemplate==4.2.0
+urllib3==2.5.0
+web3==7.12.0
+websockets==15.0.1
+yarl==1.20.1
