--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,16 @@
 DJANGO_ENV=development # Set to production in production
 DJANGO_SECRET_KEY=your-secret-key-here  # Replace with your actual Django secret key
 DJANGO_DEBUG=True  # Set to False in production
+
+
+# Email Configuration
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your_email@example.com
+EMAIL_HOST_PASSWORD=your_password
+
+# Default Email Addresses
+DEFAULT_FROM_EMAIL=XcelTrip <no-reply@xceltrip.com>
+ADMIN_EMAIL=admin@xceltrip.com
