--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,38 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
+appnope==0.1.4
 asgiref==3.8.1
+asttokens==3.0.0
 attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+backcall==0.2.0
+beautifulsoup4==4.13.4
 bitarray==3.4.3
+bleach==6.2.0
+blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.6.15
+cffi==1.17.1
+channels==4.2.2
 charset-normalizer==3.4.2
 ckzg==2.1.1
+click==8.1.8
+constantly==23.10.4
+cryptography==45.0.4
 cytoolz==1.0.1
+daphne==4.2.0
+decorator==5.2.1
+defusedxml==0.7.1
 Django==5.2.3
-django-cors-headers==4.7.0
+django-cors-headers==4.3.1
 django-schema-viewer==0.5.3
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+docopt==0.6.2
 drf-spectacular==0.28.0
 drf-yasg==1.21.10
 eth-account==0.13.7
@@ -24,38 +43,100 @@ eth-rlp==2.2.0
 eth-typing==5.2.1
 eth-utils==5.3.0
 eth_abi==5.2.0
+executing==2.2.0
+fastjsonschema==2.21.1
 frozenlist==1.7.0
+gitdb==4.0.12
+GitPython==3.1.44
 hexbytes==1.3.1
+hyperlink==21.0.0
 idna==3.10
+import-tracker==3.2.1
+incremental==24.7.2
 inflection==0.5.1
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.6
+jsonpointer==2.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
-multidict==6.6.2
-packaging==25.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab_pygments==0.3.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.1.3
+multidict==6.6.3
+narwhals==1.41.1
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+numpy==2.0.2
+packaging==24.2
+pandas==2.3.0
+pandocfilters==1.5.1
 parsimonious==0.10.0
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
 pillow==11.2.1
+pipreqs==0.5.0
+platformdirs==4.3.8
+plotly==6.1.2
+prompt_toolkit==3.0.51
 propcache==0.3.2
-psycopg2-binary==2.9.10
+protobuf==6.31.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 pycryptodome==3.23.0
 pydantic==2.11.7
 pydantic_core==2.33.2
+pydeck==0.9.1
+Pygments==2.19.2
 PyJWT==2.9.0
+pyOpenSSL==25.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 pyunormalize==16.0.0
 PyYAML==6.0.2
+pyzmq==27.0.0
 referencing==0.36.2
 regex==2024.11.6
-requests==2.32.4
+requests==2.31.0
 rlp==4.1.0
 rpds-py==0.25.1
+service-identity==24.2.0
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.7
 sqlparse==0.5.3
+stack-data==0.6.3
+streamlit==1.45.1
+tenacity==9.1.2
+tinycss2==1.4.0
+toml==0.10.2
 toolz==1.0.0
+tornado==6.5.1
+traitlets==5.14.3
+Twisted==25.5.0
+txaio==25.6.1
 types-requests==2.32.4.20250611
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+tzdata==2025.2
 uritemplate==4.2.0
-urllib3==2.5.0
+urllib3==2.4.0
+uv==0.7.3
+wcwidth==0.2.13
 web3==7.12.0
+webencodings==0.5.1
 websockets==15.0.1
+yarg==0.1.9
 yarl==1.20.1
+zope.interface==7.2
+zstandard==0.23.0
