--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ cytoolz==1.0.1
 daphne==4.2.0
 decorator==5.2.1
 defusedxml==0.7.1
+dj-database-url==3.0.1
 Django==5.2.3
 django-cors-headers==4.3.1
 django-schema-viewer==0.5.3
@@ -48,6 +49,7 @@ fastjsonschema==2.21.1
 frozenlist==1.7.0
 gitdb==4.0.12
 GitPython==3.1.44
+gunicorn==23.0.0
 hexbytes==1.3.1
 hyperlink==21.0.0
 idna==3.10
@@ -86,6 +88,7 @@ plotly==6.1.2
 prompt_toolkit==3.0.51
 propcache==0.3.2
 protobuf==6.31.1
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==20.0.0
@@ -136,6 +139,7 @@ wcwidth==0.2.13
 web3==7.12.0
 webencodings==0.5.1
 websockets==15.0.1
+whitenoise==6.9.0
 yarg==0.1.9
 yarl==1.20.1
 zope.interface==7.2
