--- a/requirements.txt
+++ b/requirements.txt
@@ -82,7 +82,7 @@ parso==0.8.4
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==11.2.1
-pipreqs==0.5.0
+pipreqs
 platformdirs==4.3.8
 plotly==6.1.2
 prompt_toolkit==3.0.51
