--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,27 @@
-# Django settings
-DJANGO_ENV=development # Set to production in production
-DJANGO_SECRET_KEY=your-secret-key-here  # Replace with your actual Django secret key
+# Django Settings
+DJANGO_ENV=production
+DJANGO_SECRET_KEY=your-django-secret-key
 DJANGO_DEBUG=True  # Set to False in production
 
-
-# Email Configuration
+# Email Settings
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=smtp.example.com
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your_email@example.com
-EMAIL_HOST_PASSWORD=your_password
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-email-password
+DEFAULT_FROM_EMAIL=Your Project <no-reply@yourdomain.com>
+ADMIN_EMAIL=admin@yourdomain.com
 
-# Default Email Addresses
-DEFAULT_FROM_EMAIL=XcelTrip <no-reply@xceltrip.com>
-ADMIN_EMAIL=admin@xceltrip.com
+# Minting / Web3
+MINT_RPC_URL=https://your-rpc-url
+MINT_CONTRACT_ADDRESS=your-contract-address
+MINT_WALLET_PRIVATE_KEY=your-wallet-private-key
+
+# Database (PostgreSQL example)
+DATABASE_URL=postgresql://username:password@host:port/dbname
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
