--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ channels==4.2.2
 charset-normalizer==3.4.2
 ckzg==2.1.1
 click==8.1.8
+cloudinary==1.44.1
 constantly==23.10.4
 cryptography==45.0.4
 cytoolz==1.0.1
@@ -82,7 +83,7 @@ parso==0.8.4
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==11.2.1
-pipreqs
+pipreqs==0.5.0
 platformdirs==4.3.8
 plotly==6.1.2
 prompt_toolkit==3.0.51
